internal/xds/translator/testdata/out/xds-ir/ext-auth-body.routes.yaml
- ignorePortInHostMatching: true
  name: default/gateway-1/http
  virtualHosts:
  - domains:
    - www.foo.com
    name: default/gateway-1/http/www_foo_com
    routes:
    - match:
        pathSeparatedPrefix: /foo1
      name: httproute/default/httproute-1/rule/0/match/0/www_foo_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ext_authz/securitypolicy/default/policy-for-http-route-1:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          checkSettings: {}
    - match:
        pathSeparatedPrefix: /foo2
      name: httproute/default/httproute-1/rule/1/match/0/www_foo_com
      route:
        cluster: httproute/default/httproute-1/rule/1
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ext_authz/securitypolicy/default/policy-for-http-route-1:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          checkSettings: {}
  - domains:
    - www.bar.com
    name: default/gateway-1/http/www_bar_com
    routes:
    - match:
        pathSeparatedPrefix: /bar
      name: httproute/default/httproute-2/rule/0/match/0/www_bar_com
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ext_authz/securitypolicy/default/policy-for-gateway-1:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          checkSettings: {}
  - domains:
    - www.baz.com
    name: default/gateway-1/http/www_baz_com
    routes:
    - match:
        pathSeparatedPrefix: /baz
      name: httproute/default/httproute-3/rule/0/match/0/www_baz_com
      route:
        cluster: httproute/default/httproute-3/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ext_authz/securitypolicy/default/policy-for-http-route-3:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          checkSettings: {}
